Correct font size, spacing and layout for chrome
All the previous fine tuning was done for the duckduckgo mobile browser
instead of the vastly more popular chrome mobile browser.

Duckduckgo rendered the business card page in a more compactly
that severely impacted how it looked on chrome.

Moving forward, design for the chrome browser.

Duh.

--- a/styles.css
+++ b/styles.css
@@ -75,8 +75,8 @@ main.card {
 }
   
 h1 {
-  font-size: 34px;
-  letter-spacing: 0.75px;
+  font-size: 36px;
+  letter-spacing: 1px;
 }
 
 .avatar {
@@ -122,12 +122,7 @@ h1 {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  transform: translateY(-15px);
-}
-
-.job-title h2 {
-  font-size: 32px;
-  letter-spacing: 2.25px;
+  transform: translateY(-10px);
 }
 
 .job-title {
@@ -136,11 +131,16 @@ h1 {
   justify-content: space-between;
 }
 
-.below-job {
+.job-title h2 {
+  font-size: 30px;
+  letter-spacing: 0.5px;
+}
+
+.contact-info {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  transform: translateY(-3px);
+  transform: translateY(3px);
 }
 
 .github,
@@ -151,7 +151,7 @@ h1 {
 }
 
 .gmail {
-  transform: translateY(-7px);
+  transform: translateY(-5px);
 }
 
 .github h2,
@@ -160,7 +160,7 @@ h1 {
 }
 
 .github h2 {
-  letter-spacing: 1.50px;
+  letter-spacing: 1.75px;
 }
 
 .gmail h2 {
